# BaboCam

./: .cproject  .gitignore  .project  BaboCam.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_log.sh
Doku/: Setup Turtlebot.odg
Doku/PAP/: Bachelorthesis.pap
python/: BaboCamSharpSensors.py
src/: BaboCam.cpp
src/color/: BallFinder.cpp  BallFinder.hpp  CameraProcessing.cpp  CameraProcessing.hpp  ColorStreamThread.cpp  ColorStreamThread.hpp
src/interfaces/: IRunnable.hpp  MovableDevice.hpp
src/math/: Navigator2D.hpp  Transformable.hpp  Vector2D.cpp  Vector2D.hpp  own_math.hpp
src/pathfinding/: PathFinder.cpp  PathFinder.hpp  StopNowException.hpp
src/sharp/: SharpSocket.cpp  SharpSocket.hpp
src/socket/: ControlSocket.cpp  ControlSocket.hpp
src/strategy/: AbstractStrategy.cpp  AbstractStrategy.hpp  DriveToBall.cpp  DriveToBall.hpp  KickBall.cpp  KickBall.hpp
src/struct/: Context.hpp
